# smart-buddy

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_zh.md  build_esp32.bat  build_esp32.ps1  do_flash.bat  idf-env.example.bat  idf-env.example.ps1  idf_component.yml  partitions.csv  run_build.ps1  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
assets/: CMakeLists.txt
components/agent_core/: CMakeLists.txt
components/audio_manager/: CMakeLists.txt
components/boards/esp32s3_box3/: CMakeLists.txt  idf_component.yml
components/boards/esp32s3_box3/include/: board_esp32s3_box3.h
components/boards/esp32s3_box3/src/: board_audio.c  board_button.c  board_display.c  board_imu.c  board_led.c  board_touch.c
components/buddy_hal/: CMakeLists.txt
components/transport/: CMakeLists.txt  idf_component.yml
components/transport/include/transport/: transport.h
components/transport/src/: transport.c  transport_ble.c  transport_usb.c  transport_ws.c
components/ui/: CMakeLists.txt
components/ui/include/ui/: persona.h  ui_manager.h
components/ui/src/: persona_data.c  persona_driver.c  ui_manager.c  ui_screen_ble_debug.c  ui_screen_debug.c
docs/: architecture.md  porting.md  protocol.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c
tmp/esp32-ai-box/main/: CMakeLists.txt  Kconfig.projbuild  app_display.c  app_display.h  app_runtime.c  app_runtime.h  idf_component.yml  main.c
tmp/esp32-ai-box/main/components/ai_service/: CMakeLists.txt  ai_service.c  ai_service.h
tmp/esp32-ai-box/main/components/ai_service/providers/: deepseek.c  deepseek.h  openai.c  openai.h  zhipu.c  zhipu.h
tmp/esp32-ai-box/main/components/audio/: CMakeLists.txt  audio.c  audio.h
tmp/esp32-ai-box/main/components/config/: CMakeLists.txt  config.c  config.h
tmp/esp32-ai-box/main/components/conversation/: CMakeLists.txt  conversation.c  conversation.h
tmp/esp32-ai-box/main/components/network/: CMakeLists.txt  network.c  network.h
tmp/esp32-ai-box/main/components/storage/: CMakeLists.txt  storage.c  storage.h
tmp/esp32-ai-box/main/components/ui/: CMakeLists.txt  ui.c  ui.h  ui_debug.c  ui_debug_internal.h
tmp/esp32-ai-box/main/components/voice_chat/: CMakeLists.txt  voice_gateway_client.c  voice_gateway_client.h  voice_session.c  voice_session.h
tools/: convert_image.py  gen_version.py  menuconfig.sh
(+40 files in other folders)
